--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,6 +4,7 @@
   position: relative;
   margin: 0 auto;
   font-family: "Inter", Arial, Helvetica, sans-serif;
+  margin-top: auto;
 }
 
 .footer__description {
