--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,12 +1,13 @@
 .header {
   margin-top: 45px;
-  padding: 25px 0;
+  max-width: 880p;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 .header__logo {
   width: 173px;
+  margin-bottom: 41px;
 }
 
 @media screen and (max-width: 520px) {
