--- a/blocks/page.css
+++ b/blocks/page.css
@@ -13,8 +13,8 @@
 .page__content {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   padding: 0 20px;
+  flex-grow: 1;
 }
 
 @media screen and (max-width: 520px) {
