--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,9 @@
 .profile {
   display: flex;
   align-items: center;
-  padding: 45px 0 51px;
+  padding: 0;
+  margin-top: 40px;
+  margin-bottom: 51px;
 }
 
 .profile__info {
@@ -86,7 +88,6 @@
 @media screen and (max-width: 880px) {
   .profile {
     flex-direction: column;
-    align-items: center;
   }
 
   .profile__description {
@@ -104,6 +105,8 @@
 
 @media screen and (max-width: 520px) {
   .profile {
+    flex-direction: column;
+    align-items: center;
     font-size: 22px;
     font-weight: 500;
     margin: 0 auto;
@@ -117,8 +120,6 @@
   }
 
   .profile__info {
-    min-width: 320px;
-    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
