--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,6 +1,5 @@
 .cards__list {
-  margin-bottom: 0;
-  margin-top: 30px;
+  margin: 0;
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
