--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -128,7 +128,6 @@
     align-items: center;
     padding: 0;
   }
-  /* I'm having trouble here making the profile section look as it should. Could you give me some guidance? Thanks! */
 
   .profile__title {
     min-width: 196px;
@@ -136,6 +135,7 @@
     line-height: 27px;
     margin-top: auto;
     text-align: center;
+    width: calc(100% - 28px);
   }
 
   .profile__edit-button {
