--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,7 +11,7 @@
   display: none;
 }
 
-.modal__opened {
+.modal_opened {
   display: flex;
 }
 
@@ -21,6 +21,10 @@
   background-color: #fff;
   margin: auto;
   border-radius: 10px;
+  width: 100%;
+  max-width: 430px;
+  max-height: 330px;
+  box-sizing: border-box;
 }
 
 .modal__close {
@@ -35,4 +39,57 @@
   background-image: url("../images/close.svg");
   background-repeat: no-repeat;
   background-size: contain;
+  transition: 0.3s;
+}
+
+.modal__close:hover {
+  opacity: 0.6;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+.modal__heading {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29px;
+  letter-spacing: 0em;
+  color: black;
+  text-align: left;
+  padding: 0;
+  margin: 0 0 50px 0;
+}
+
+.modal__button {
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  padding: 15px;
+  border-radius: 2px;
+  margin-top: 20px;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.modal__button:hover {
+  opacity: 80%;
+}
+
+.modal__input {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 1);
+  margin: 0 0 30px 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 400;
+  height: 27px;
+  width: 100%;
 }
