--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,23 +1,26 @@
 .header {
   margin-top: 45px;
-  max-width: 880px;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  min-height: 74px;
+  width: 100%;
+  border-bottom: 1px solid rgb(84 84 84 / 0.7);
 }
 
-.header__logo {
-  width: 173px;
-  margin-bottom: 41px;
+.header__image {
+  margin: 0;
 }
 
-@media screen and (max-width: 520px) {
-  .header {
-    margin-top: 28px;
+@media screen and (max-width: 480px) {
+  .header__image {
+    max-width: 126px;
+    min-height: 24px;
+    margin-left: 27px;
   }
 
-  .header__logo {
-    max-width: 126px;
-    padding-left: 27px;
-    margin-bottom: 32px;
+  .header {
+    margin-top: 28px;
+    margin-bottom: 42px;
+    max-width: 100%;
+    min-height: 56px;
+    margin-left: 0;
   }
 }
