--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,31 +1,34 @@
 .footer {
-  max-width: 880px;
-  width: calc(100% - 38px);
-  position: relative;
-  margin: 0 auto;
+  min-height: 18px;
   font-family: "Inter", Arial, Helvetica, sans-serif;
-  margin-top: auto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.78px;
+  color: #545454;
+  margin: 67px auto 67px;
 }
 
-.footer__description {
-  color: rgba(84, 84, 84, 1);
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21.78px;
-  margin: 67px auto 60px;
+.footer__copyright {
+  margin: 0;
 }
 
 @media screen and (max-width: 920px) {
-  .footer__description {
-    max-width: 282px;
+  .footer {
+    max-width: calc(100% - 40px);
   }
 }
 
-@media screen and (max-width: 520px) {
-  .footer__description {
+@media screen and (max-width: 480px) {
+  .footer {
+    margin-top: 48px;
+    margin-bottom: 36px;
+    max-width: 282px;
+    min-height: 14px;
+  }
+
+  .footer__copyright {
     font-size: 14px;
     line-height: 16.94px;
-    margin: 48px auto 36px;
+    text-align: left;
   }
 }
