--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -2,125 +2,222 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  right: 0;
   left: 0;
-  background-color: rgb(0, 0, 0, 0.5);
-  color: black;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
+  display: flex;
   padding: 0 19px;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__heading {
+  width: 330px;
+  height: 23px;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29.05px;
+  text-align: left;
+  margin-top: 0;
+  margin-bottom: 54px;
+  padding: 36px 36px 0 36px;
+}
+
+.modal__form {
+  display: grid;
+  grid-gap: 29.74px;
+  margin-bottom: 48px;
+  padding: 0 36px;
+}
+
+.modal__form-input {
+  min-height: 27.26px;
+  border: 1px solid rgba(0, 0, 0, 1);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.94px;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+}
+
+.form__input::placeholder {
+  color: black;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.94px;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
+  width: 358px;
+  height: 14px;
+}
+
+.preview_image_modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 100%;
   display: flex;
 }
 
 .modal__container {
-  position: relative;
-  padding: 36px;
-  background-color: #fff;
+  background-color: white;
   margin: auto;
   border-radius: 10px;
-  width: 100%;
-  max-width: 430px;
-  max-height: 330px;
-  box-sizing: border-box;
-}
-
-.modal__close {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  position: absolute;
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
-  width: 40px;
-  height: 40px;
-  background-image: url("../images/close.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  transition: 0.3s;
-}
-
-.modal__close:hover {
-  opacity: 0.6;
-}
-
-.modal__form {
+  color: black;
+  position: relative;
   display: flex;
   flex-direction: column;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  color: black;
+  width: 430px;
+  height: 330px;
 }
 
-.modal__heading {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 29px;
-  letter-spacing: 0em;
-  color: black;
-  text-align: left;
-  padding: 0;
-  margin: 0 0 50px 0;
+.modal_container_preview {
+  border-radius: 8px;
+  margin: auto;
 }
 
 .modal__button {
-  background-color: black;
+  background-image: url("../images/Rectangle.svg");
   color: white;
-  font-size: 18px;
-  padding: 15px;
-  border-radius: 2px;
-  margin-top: 20px;
-  text-align: center;
-  border: none;
-  cursor: pointer;
   width: 100%;
+  height: 50.15px;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  background-repeat: no-repeat;
+  background-color: black;
+  cursor: pointer;
+  border: none;
 }
 
 .modal__button:hover {
-  opacity: 80%;
+  opacity: 0.7;
+  transition: opacity 0.2s ease-in-out;
 }
 
-.modal__input {
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  color: rgba(0, 0, 0, 1);
-  margin: 0 0 30px 0;
-  padding: 0;
-  font-size: 14px;
+.modal__button-text {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 18px;
   font-weight: 400;
-  height: 27px;
+  line-height: 21.78px;
+  text-align: center;
   width: 100%;
+  margin: auto;
 }
 
-@media screen and (max-width: 630px) {
+.modal__close {
+  background-image: url("../images/CloseIcon.svg");
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: calc(100% + 5px);
+  left: calc(100% + 5px);
+  cursor: pointer;
+}
+
+#preview-close-button {
+  background-image: url("../images/CloseIcon.svg");
+  position: relative;
+  top: -10px;
+  right: -10px;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  margin: auto;
+}
+
+.modal__image {
+  display: flex;
+  margin: auto;
+  max-width: 75vw;
+  max-height: 75vh;
+}
+
+.preview_modal_description {
+  width: 291px;
+  height: 12px;
+  top: 640px;
+  left: 424px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
+  text-align: left;
+  color: white;
+}
+
+.modal__close:hover {
+  opacity: 0.7;
+  transition: opacity 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 480px) {
+  .modal__container {
+    width: 282px;
+    height: 322px;
+  }
+
   .modal__close {
-    bottom: calc(100% + 30px);
-    left: calc(100% - 30px);
     width: 26px;
     height: 26px;
-    padding: 0;
-    background-size: contain;
-    transition: 0.3s;
+    left: calc(100% + -26px);
+    top: -40px;
   }
 
   .modal__heading {
+    font-family: "Inter", Arial, Helvetica, sans-serif;
     font-size: 18px;
+    font-weight: 900;
+    line-height: 21.78px;
+    width: 238px;
+    height: 22px;
+    padding: 25px 22px 0 22px;
+    margin-bottom: 75px;
   }
 
   .modal__button {
-    max-width: 238px 100%;
-    max-height: 50px;
-    border: none;
-    font-size: 14px;
+    width: 100%;
+    height: 46px;
+    border-radius: 2px;
+    padding: 0;
   }
-}
 
-@media screen and (max-width: 320px) {
-  .modal__container {
-    max-width: 282px;
-    max-height: 322px;
-    padding: 30px;
+  .modal__button-text {
+    width: 38px;
+    height: 18px;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.94px;
+    text-align: center;
+    margin: auto;
+  }
+
+  .modal__form {
+    max-width: 238px;
+    padding: 0 22px 25px;
+    margin: 0;
+    grid-gap: 30px;
   }
 }
