--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,5 @@
 .page {
+  font-family: "inter", Arial, Helvetica, sans-serif;
   background-color: black;
   color: white;
 }
@@ -6,24 +7,19 @@
 .page__section {
   max-width: 880px;
   width: 100%;
+  position: relative;
   margin: 0 auto;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 .page__content {
   display: flex;
   flex-direction: column;
-  padding: 0 20px;
-  flex-grow: 1;
+  min-height: 100vh;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 1100px) {
   .page__section {
-    max-width: 320px;
-    gap: inherit;
-  }
-
-  .page__content {
-    padding: 0;
+    margin: 0 20px;
+    max-width: calc(100% - 40px);
   }
 }
