--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,17 +1,15 @@
 .profile {
   display: flex;
   align-items: center;
-  padding: 0;
-  margin-top: 40px;
+  padding-top: 40px;
   margin-bottom: 51px;
 }
 
 .profile__info {
   display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
-  grid-template-columns: minmax(auto, 380px) auto;
+  grid-template-areas: "title button" "discription discription";
+  min-height: 77px;
+  max-width: 415px;
 }
 
 .profile__edit-button {
@@ -19,139 +17,116 @@
   height: 24px;
   width: 24px;
   grid-area: button;
-  align-self: center;
-  border: 1px solid rgba(255, 255, 255, 1);
-  background-size: 10px;
-  cursor: pointer;
+  border: 1px solid #ffffff;
   margin-left: 18px;
+  margin-top: 15px;
+  cursor: pointer;
 }
 
 .profile__edit-button:hover {
-  opacity: 60%;
+  opacity: 0.6;
+  transition: 0.5s ease-in;
 }
 
 .profile__add-button {
   background: transparent url(../images/add-button.svg) center no-repeat;
   width: 150px;
   height: 50px;
-  padding: 0;
   margin-left: auto;
-  border: 2px solid #fff;
-  border-radius: 2px;
+  border: 2px solid #ffffff;
   cursor: pointer;
 }
 
 .profile__add-button:hover {
-  opacity: 60%;
+  opacity: 0.6;
+  transition: 0.5s ease-in;
 }
 
 .profile__title {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
-  letter-spacing: 0em;
-  text-align: left;
   grid-area: title;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 380px;
+  max-width: 373px;
 }
 
 .profile__description {
-  font-family: "Inter", Arial, sans-serif;
   font-size: 18px;
-  line-height: 22px;
   font-weight: 400;
-  grid-area: description;
+  line-height: 21.78px;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 415px;
   overflow: hidden;
-  text-align: left;
-  letter-spacing: 0em;
+  max-width: 415px;
 }
 
 .profile__image {
   height: 120px;
   width: 120px;
-  border-radius: 50%;
-  margin: 0;
+  margin-right: 24px;
   object-fit: cover;
   background-position: center;
-  margin-right: 30px;
+  border-radius: 50%;
 }
 
-@media screen and (max-width: 880px) {
-  .profile {
-    flex-direction: column;
-  }
-
-  .profile__description {
-    margin-top: 14px;
-    text-align: center;
-    font-size: 14px;
-    line-height: 16.94px;
-  }
-
+@media screen and (max-width: 780px) {
   .profile__add-button {
-    margin: 0 auto;
-    margin-top: 16px;
+    margin: 20px;
   }
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 480px) {
   .profile {
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    font-size: 22px;
-    font-weight: 500;
-    margin: 0 auto;
-    padding: 0;
-    min-width: 282px;
-    width: 100%;
-  }
-
-  .profile__image {
-    margin: 42px 0 30px;
+    padding-top: 0;
+    margin-bottom: 0;
   }
 
   .profile__info {
     display: flex;
-    max-width: 282px;
     flex-wrap: wrap;
+    width: 100%;
     justify-content: center;
-    align-items: center;
-    padding: 0;
-  }
-
-  .profile__title {
-    min-width: 196px;
-    font-size: 22px;
-    line-height: 27px;
-    margin-top: auto;
-    text-align: center;
-    width: calc(100% - 28px);
-  }
-
-  .profile__edit-button {
-    height: 18px;
-    width: 18px;
-    margin: 0;
-    margin-left: 10px;
   }
 
   .profile__description {
     width: 100%;
+    text-align: center;
+    font-size: 14px;
+    line-height: 16.94px;
+    text-align: center;
+    margin-bottom: 36px;
+    margin-top: 14px;
   }
 
   .profile__add-button {
-    margin: 36px 0;
-    max-width: 282px;
+    margin: 0;
     width: 100%;
+    margin-bottom: 36px;
+    padding: 0;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin-top: auto;
+    margin-left: 10px;
+  }
+
+  .profile__title {
+    max-width: 196px;
+    font-size: 22px;
+    line-height: 26.63px;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .profile__image {
+    margin: 0;
   }
 }
