--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,3 +1,5 @@
+/* I'm not sure what's going on because I can see that buttons on my end. Can you give me some tips? */
+
 .card__text {
   font-size: 24px;
   font-weight: 900;
