--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,26 +1,20 @@
 .header {
-  margin-top: 45px;
-  min-height: 74px;
-  width: 100%;
-  border-bottom: 1px solid rgb(84 84 84 / 0.7);
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
-.header__image {
-  margin: 0;
+.header__logo {
+  margin: 45px 0 41px;
 }
 
 @media screen and (max-width: 480px) {
-  .header__image {
-    max-width: 126px;
-    min-height: 24px;
-    margin-left: 27px;
+  .header {
+    border-bottom-width: 100%;
   }
 
-  .header {
-    margin-top: 28px;
-    margin-bottom: 42px;
-    max-width: 100%;
-    min-height: 56px;
-    margin-left: 0;
+  .header__logo {
+    width: 126px;
+    height: 24px;
+    margin: 28px 0 32px 27px;
   }
 }
