--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,25 +1,31 @@
 .page {
-  font-family: "inter", Arial, Helvetica, sans-serif;
   background-color: black;
   color: white;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 .page__section {
   max-width: 880px;
   width: 100%;
-  position: relative;
   margin: 0 auto;
+  position: relative;
 }
 
 .page__content {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 0 20px;
 }
 
-@media screen and (max-width: 1100px) {
-  .page__section {
-    margin: 0 20px;
-    max-width: calc(100% - 40px);
+@media screen and (max-width: 900px) {
+  .page__content {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page__content {
+    padding: 0;
   }
 }
