--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,131 +2,129 @@
   display: flex;
   align-items: center;
   padding-top: 40px;
-  margin-bottom: 51px;
+  max-width: 880px;
 }
 
 .profile__info {
   display: grid;
-  grid-template-areas: "title button" "discription discription";
-  min-height: 77px;
-  max-width: 415px;
+  grid-template-areas:
+    "title button"
+    "description description";
+  grid-template-columns: minmax(auto, 373px) auto;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 42px;
+  line-height: 48px;
+  text-align: left;
+  align-items: center;
+  gap: 15px;
+}
+
+.profile__edit-button,
+.profile__add-button {
+  background: transparent;
+  border: 1px solid #fff;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
 }
 
 .profile__edit-button {
-  background: transparent url(../images/edit-button.svg) center no-repeat;
-  height: 24px;
+  background: url("../images/edit-button.svg") center no-repeat;
   width: 24px;
+  height: 24px;
   grid-area: button;
-  border: 1px solid #ffffff;
-  margin-left: 18px;
-  margin-top: 15px;
-  cursor: pointer;
 }
 
 .profile__edit-button:hover {
   opacity: 0.6;
-  transition: 0.5s ease-in;
 }
 
 .profile__add-button {
-  background: transparent url(../images/add-button.svg) center no-repeat;
+  background: url("../images/add-button.svg") center no-repeat;
   width: 150px;
   height: 50px;
+  grid-area: button;
   margin-left: auto;
-  border: 2px solid #ffffff;
-  cursor: pointer;
+  border-width: 2px;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
   opacity: 0.6;
-  transition: 0.5s ease-in;
 }
 
 .profile__title {
   font-size: 42px;
-  font-weight: 500;
   line-height: 48px;
+  font-weight: 500;
   grid-area: title;
   margin: 0;
+  max-width: 373px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 373px;
 }
 
 .profile__description {
   font-size: 18px;
-  font-weight: 400;
-  line-height: 21.78px;
+  line-height: 22px;
+  grid-area: description;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 415px;
 }
 
 .profile__image {
   height: 120px;
   width: 120px;
   margin-right: 24px;
-  object-fit: cover;
-  background-position: center;
   border-radius: 50%;
-}
-
-@media screen and (max-width: 780px) {
-  .profile__add-button {
-    margin: 20px;
-  }
+  object-fit: cover;
+  object-position: center;
 }
 
 @media screen and (max-width: 480px) {
   .profile {
     flex-direction: column;
-    padding-top: 0;
-    margin-bottom: 0;
+    justify-content: center;
+    padding-top: 42px;
   }
 
   .profile__info {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
     width: 100%;
-    justify-content: center;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    line-height: 16.94px;
-    text-align: center;
-    margin-bottom: 36px;
-    margin-top: 14px;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: 100%;
-    margin-bottom: 36px;
-    padding: 0;
-  }
-
-  .profile__edit-button {
-    width: 18px;
-    height: 18px;
-    margin-top: auto;
-    margin-left: 10px;
   }
 
   .profile__title {
     max-width: 196px;
     font-size: 22px;
-    line-height: 26.63px;
+    line-height: 27px;
+  }
+
+  .profile__description {
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 14px;
     text-align: center;
-    margin-top: 30px;
+    max-width: 282px;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    padding-top: 4px;
+  }
+
+  .profile__add-button {
+    margin: 36px 0;
+    width: 282px;
   }
 
   .profile__image {
-    margin: 0;
+    margin-bottom: 30px;
   }
 }
