--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -23,8 +23,7 @@
 
 .modal__image {
   max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .modal__container {
@@ -44,6 +43,7 @@
   max-height: 75vh;
   max-width: 75vw;
   width: auto;
+  background-color: transparent;
   border: none;
   padding: 0;
 }
@@ -77,7 +77,7 @@
   cursor: pointer;
   position: absolute;
   bottom: calc(100% + 0.3125rem);
-  right: 0;
+  right: -37px;
   width: 2.5rem;
   height: 2.5rem;
   background-repeat: no-repeat;
@@ -155,19 +155,17 @@
   }
 }
 
-/* Error state: underline should be red */
 .modal__input_type_error {
-  border-bottom: 1px solid red; /* Red underline for error state */
+  border-bottom: 1px solid red;
 }
 
-/* Error message styling */
 .modal__container .popup__error {
-  color: red; /* Error message color */
-  font-size: 0.75rem; /* Adjust font size as needed */
-  margin-top: 0.5rem; /* Add margin if needed */
-  display: none; /* Initially hidden */
+  color: red;
+  font-size: 0.75rem;
+  margin-top: 0.5rem;
+  display: none;
 }
 
 .modal__container .popup__error_visible {
-  display: block; /* Show error message when validation fails */
+  display: block;
 }
