--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,23 +1,22 @@
 .cards {
-  margin-top: 30px;
+  grid-template-rows: auto;
+  justify-content: center;
 }
 
-.cards__list {
+.cards__list-content {
   display: grid;
+  list-style: none;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-@media screen and (max-width: 480px) {
-  .cards__list {
-    padding: 0 19px;
-  }
-
+@media screen and (max-width: 320px) {
   .cards {
-    margin-top: 0;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
