--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,20 +1,26 @@
 .footer {
-  box-sizing: border-box;
+  font-size: 18px;
+  line-height: 22px;
+  color: #545454;
 }
 
 .footer__copyright {
-  color: #545454;
-  margin: 67px 0 60px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
   font-size: 18px;
   line-height: 22px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  height: 18px;
+  margin: 67px 0px 60px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .footer__copyright {
-    position: relative;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 17px;
-    margin: 48px 0 36px 19px;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 48px;
+    margin-bottom: 36px;
   }
 }
