--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,54 +2,7 @@
   display: flex;
   align-items: center;
   padding-top: 40px;
-  max-width: 880px;
-}
-
-.profile__info {
-  display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 42px;
-  line-height: 48px;
-  text-align: left;
-  align-items: center;
-  gap: 15px;
-}
-
-.profile__edit-button,
-.profile__add-button {
-  background: transparent;
-  border: 1px solid #fff;
-  cursor: pointer;
-  transition: opacity 0.3s ease;
-}
-
-.profile__edit-button {
-  background: url("../images/edit-button.svg") center no-repeat;
-  width: 24px;
-  height: 24px;
-  grid-area: button;
-}
-
-.profile__edit-button:hover {
-  opacity: 0.6;
-}
-
-.profile__add-button {
-  background: url("../images/add-button.svg") center no-repeat;
-  width: 150px;
-  height: 50px;
-  grid-area: button;
-  margin-left: auto;
-  border-width: 2px;
-  border-radius: 2px;
-}
-
-.profile__add-button:hover {
-  opacity: 0.6;
+  margin-bottom: 36px;
 }
 
 .profile__title {
@@ -58,10 +11,57 @@
   font-weight: 500;
   grid-area: title;
   margin: 0;
-  max-width: 373px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 373px;
+}
+
+.profile__title-label {
+  display: flex;
+  overflow: hidden;
+}
+
+.profile__info {
+  display: grid;
+  grid-template-areas:
+    "title button"
+    "description description";
+  grid-template-columns: minmax(373px auto);
+  grid-gap: 9px 17px;
+}
+
+.profile__edit-button {
+  background: transparent url(../images/edit-button.svg) center no-repeat;
+  width: 24px;
+  height: 24px;
+  grid-area: button;
+  border: 1px solid rgba(255, 255, 255, 1);
+  cursor: pointer;
+  background-size: 10px 10px;
+  align-self: center;
+  padding: 0;
+  margin: 0;
+  margin-left: 18px;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
+}
+
+.profile__add-button {
+  background: transparent url(../images/add-button.svg) center no-repeat;
+  width: 150px;
+  height: 50px;
+  border: 2px solid rgba(255, 255, 255, 1);
+  border-radius: 2px;
+  cursor: pointer;
+  background-size: 22px;
+  margin-left: auto;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
 }
 
 .profile__description {
@@ -72,59 +72,71 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 415px;
 }
 
 .profile__image {
   height: 120px;
   width: 120px;
-  margin-right: 24px;
   border-radius: 50%;
   object-fit: cover;
-  object-position: center;
+  background-position: center;
+  margin: 0 29px 0 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .profile {
     flex-direction: column;
-    justify-content: center;
-    padding-top: 42px;
+    margin-bottom: 36px;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    margin-top: 26px;
+    margin-left: 18px;
+    line-height: 27px;
+    max-width: 196px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  .profile__title-label {
+    text-align: center;
+  }
+
+  .profile__image {
+    margin-right: 0;
+  }
+
+  .profile__description {
+    text-align: center;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 14px auto;
+    max-width: 282px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   .profile__info {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     gap: 0;
-    width: 100%;
-  }
-
-  .profile__title {
-    max-width: 196px;
-    font-size: 22px;
-    line-height: 27px;
-  }
-
-  .profile__description {
-    width: 100%;
-    font-size: 14px;
-    font-weight: 400;
-    margin-top: 14px;
-    text-align: center;
-    max-width: 282px;
   }
 
   .profile__edit-button {
     width: 18px;
     height: 18px;
-    padding-top: 4px;
+    margin-top: 10%;
   }
 
   .profile__add-button {
-    margin: 36px 0;
     width: 282px;
-  }
-
-  .profile__image {
-    margin-bottom: 30px;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 36px;
   }
 }
