--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,5 +1,3 @@
-/* Base modal styles */
-
 .modal {
   position: fixed;
   top: 0;
@@ -34,8 +32,8 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin-bottom: 34px;
-  margin-top: 0; /* Updated heading margin for desktop */
+  margin-top: 0;
+  margin-bottom: 54px;
 }
 
 .modal_opened {
@@ -47,7 +45,7 @@
 
 .modal__container {
   position: relative;
-  padding: 34px 36px; /* Updated desktop padding */
+  padding: 34px 36px;
   background-color: #ffff;
   margin: auto;
   border-radius: 10px;
@@ -91,21 +89,6 @@
   opacity: 0.8;
 }
 
-.modal__close-button-preview {
-  display: flex;
-  border: none;
-  position: absolute;
-  top: -45px;
-  right: -45px;
-  cursor: pointer;
-  background-image: url(../images/closeIcon.svg);
-  width: 40px;
-  height: 40px;
-  background-color: transparent;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
 .modal_add_opened {
   visibility: visible;
   transition: visibility 0s 0.6s;
@@ -119,6 +102,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal__input {
@@ -132,17 +117,27 @@
   border-width: 1px;
   border-bottom-color: #ccc; /* Default underline color */
   font-family: "Inter", Arial, Helvetica, sans-serif;
-  margin-bottom: 5px;
-  margin-top: 54px; /* Space between heading and first input for desktop */
-  transition: border-bottom-color 0.3s ease; /* Smooth transition for underline color */
+  margin-top: 0;
+  margin-bottom: 0;
+  transition: border-bottom-color 0.3s ease;
 }
 
-.modal__input + .modal__input {
-  margin-top: 29.74px; /* Space between both inputs for desktop */
+.modal__input:not(:last-of-type) {
+  margin-bottom: 29.74px;
 }
 
-.modal__input_error {
-  border-bottom-color: rgba(255, 0, 0, 1);
+/* Ensure the last input does not have extra margin at the bottom */
+.modal__input:last-of-type {
+  margin-bottom: 0;
+}
+
+/* Adjust the error message spacing */
+.modal__error {
+  visibility: visible;
+  height: 17px;
+  color: rgba(255, 0, 0, 1);
+  margin-top: 5px; /* Set the space between the input and the error message to 5px */
+  margin-bottom: 0;
 }
 
 .modal__input-button:hover {
@@ -163,25 +158,8 @@
   border: none;
 }
 
-.modal__input_type-title {
-  border-style: solid;
-  border-left-style: hidden;
-  border-right-style: hidden;
-  border-top-style: hidden;
-  width: 100%;
-  border-width: 1px;
-}
-
 .modal__image {
   max-width: 800px;
-}
-
-.modal__error {
-  position: absolute;
-  visibility: visible;
-  height: 17px;
-  color: rgba(255, 0, 0, 1);
-  margin-bottom: 13px;
 }
 
 .modal__disabled {
@@ -190,50 +168,84 @@
   color: gray;
 }
 
-/* Mobile Modal (up to 320px wide) */
+@media only screen and (max-width: 768px) {
+  .modal__container {
+    width: 80%;
+    padding: 20px;
+    margin-top: 20px;
+  }
+
+  .modal__heading {
+    font-size: 20px;
+    margin-bottom: 24px;
+  }
+
+  .modal__input {
+    padding: 10px;
+    font-size: 14px;
+    width: 90%;
+  }
+
+  .modal__input-button {
+    padding: 12px;
+    font-size: 16px;
+    height: 46px;
+  }
+
+  .modal__close {
+    width: 20px;
+    height: 20px;
+    top: -20px;
+    right: -20px;
+  }
+
+  .modal__error {
+    font-size: 12px;
+  }
+}
+
 @media only screen and (max-width: 320px) {
   .modal {
     padding: 123px 19px;
   }
-
   .modal__container {
     width: 282px;
     height: 322px;
-    padding: 25px; /* Modal container padding for mobile */
-    position: relative;
+    padding: 25px;
   }
 
   .modal__input {
     width: 100%; /* Make sure the input fields fit within the modal container */
     padding: 8px;
     margin-bottom: 10px;
-    margin-top: 75px; /* Space between heading and first input for mobile */
+    margin-top: 35px;
   }
 
-  .modal__input + .modal__input {
-    margin-top: 30px; /* Space between both inputs for mobile */
+  .modal__input:first-of-type {
+    margin-bottom: 30px;
+  }
+  .modal__input:last-of-type {
+    margin-bottom: 45px;
   }
 
   .modal__input-button {
     width: 100%;
     padding: 10px;
-    font-size: 14px; /* Button font size for mobile */
-    margin-top: 45px; /* Space between last input and button for mobile */
+    font-size: 14px;
   }
 
   .modal__close {
     width: 26px;
     height: 26px;
-    top: -30px; /* Position close button above modal for mobile */
-    right: -10px;
-    position: absolute;
-    z-index: 1001;
+    top: -50px; /* Keep close button in bounds */
+    right: 10px;
+    position: fixed;
   }
 
   .modal__heading {
-    font-size: 18px; /* Heading font size for mobile */
-    margin-bottom: 20px;
+    font-size: 18px;
+    margin-top: 0;
+    margin-bottom: 40px;
     line-height: 21.78px;
-    margin-top: 0; /* Heading margin top for mobile */
   }
 }
