--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -84,7 +84,7 @@
   margin: 0 29px 0 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .profile {
     flex-direction: column;
     margin-bottom: 36px;
